src/styles/App.css
#root {
  /* max-width: 1280px; */
  margin: 0 auto;
  padding: 1px;
  /* text-align: center; */
  background-image: url();
  
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.navbar {
  display: flex;
  align-items: center;
  padding: 10px;
  /* border: 2px black solid; */
  box-shadow: 0px 1px 10px 12px rgba(0, 0, 0, 0.1);
  position: sticky;
  top: 0;
  background-color: rgb(255, 255, 255);

  
}
.navbar h1 {
  text-align: left;
  margin: 0;
  padding: 10px;
  margin-left: 140px;
}
.navbar img {
  height: 60px;
  /* margin-right: 20px; */
  border-radius: 50%;  cursor: pointer;
  
}

.Heading {
  color: transparent;
  font-family: "Bungee", cursive;
  background-clip: text;
  background-position: center;
  
  background-image: url(./images/signature.jpg);  cursor: pointer;
}
/* .btn-group {
  display: flex;
  gap: 10px;
} */

